[package]
name = "joycon-sys"
license = "MIT"
version = "0.1.0"
authors = ["Yamakaky <yamakaky@yamaworld.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = { version = "0.17", default-features = false }
num = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
num-derive = { version = "0.4", default-features = false }
# cgmath = { version = "0.18", default-features = false }
arrform = "0.1.1"
libm = { version = "0.2.11", optional = true }

[features]
default = []
libm = ["num-traits/libm", "num/libm", "dep:libm"]
